[package]
name = "tui-rule"
version = "0.1.2"
edition = "2024"
authors = ["F-77777"]
license = "MIT"
description = "a pretty rule widget for ratatui"

[lib]
doctest = false

[dependencies]
colorgrad = "0.7.0"
crossterm = { version = "0.28.1", optional = true }
derive_builder = "0.20.2"
getset = "0.1.5"
ratatui = { version = "0.30.0", features = ["unstable-widget-ref"] }
serde = { version = "1.0.219", features = ["derive"], optional = true }

[features]
default = ["all"]
all = ["utils", "serde", "crossterm"]
utils = []
